identify and categorize all EKS Best Practices policies
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/best-practices/disallow_cri_sock_mount/disallow_cri_sock_mount.yaml
+++ b/best-practices/disallow_cri_sock_mount/disallow_cri_sock_mount.yaml
@@ -4,9 +4,10 @@ metadata:
   name: disallow-container-sock-mounts
   annotations:
     policies.kyverno.io/title: Disallow CRI socket mounts
-    policies.kyverno.io/category: Best Practices
+    policies.kyverno.io/category: Best Practices, EKS Best Practices
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
+    policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/description: >-
       Container daemon socket bind mounts allows access to the container engine on the
       node. This access can be used for privilege escalation and to manage containers
@@ -18,9 +19,10 @@ spec:
   rules:
   - name: validate-docker-sock-mount
     match:
-      resources:
-        kinds:
-        - Pod
+      any:
+      - resources:
+          kinds:
+          - Pod
     validate:
       message: "Use of the Docker Unix socket is not allowed."
       pattern:
@@ -30,9 +32,10 @@ spec:
                 path: "!/var/run/docker.sock"
   - name: validate-containerd-sock-mount
     match:
-      resources:
-        kinds:
-        - Pod
+      any:
+      - resources:
+          kinds:
+          - Pod
     validate:
       message: "Use of the Containerd Unix socket is not allowed."
       pattern:
@@ -42,9 +45,10 @@ spec:
                 path: "!/var/run/containerd.sock"
   - name: validate-crio-sock-mount
     match:
-      resources:
-        kinds:
-        - Pod
+      any:
+      - resources:
+          kinds:
+          - Pod
     validate:
       message: "Use of the CRI-O Unix socket is not allowed."
       pattern:
