--- a/other/require-non-root-groups/require-non-root-groups.yaml
+++ b/other/require-non-root-groups/require-non-root-groups.yaml
@@ -3,7 +3,7 @@ kind: ClusterPolicy
 metadata:
   name: require-non-root-groups
   annotations:
-    policies.kyverno.io/category: Sample
+    policies.kyverno.io/category: Sample, EKS Best Practices
     policies.kyverno.io/severity: medium
     policies.kyverno.io/minversion: 1.3.6
     kyverno.io/kyverno-version: 1.6.0
