--- a/pod-security/subrule/baseline/baseline-latest.yaml
+++ b/pod-security/subrule/baseline/baseline-latest.yaml
@@ -4,7 +4,7 @@ metadata:
   name: podsecurity-subrule-baseline
   annotations:
     policies.kyverno.io/title: Baseline Pod Security Standards
-    policies.kyverno.io/category: Pod Security
+    policies.kyverno.io/category: Pod Security, EKS Best Practices
     policies.kyverno.io/severity: high
     kyverno.io/kyverno-version: 1.8.0
     policies.kyverno.io/minversion: 1.8.0
