--- a/aws/require_encryption_aws_loadbalancers/require-encryption-aws-loadbalancers.yaml
+++ b/aws/require_encryption_aws_loadbalancers/require-encryption-aws-loadbalancers.yaml
@@ -4,7 +4,7 @@ metadata:
   name: require-encryption-aws-loadbalancers
   annotations:
     policies.kyverno.io/title: Require Encryption with AWS LoadBalancers
-    policies.kyverno.io/category: AWS
+    policies.kyverno.io/category: AWS, EKS Best Practices
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Service
     kyverno.io/kyverno-version: 1.7.3, 1.8.0-rc2
