--- a/best-practices/add_networkpolicy_dns/add-networkpolicy-dns.yaml
+++ b/best-practices/add_networkpolicy_dns/add-networkpolicy-dns.yaml
@@ -4,7 +4,7 @@ metadata:
   name: add-networkpolicy-dns
   annotations:
     policies.kyverno.io/title: Add Network Policy for DNS
-    policies.kyverno.io/category: Multi-Tenancy
+    policies.kyverno.io/category: Multi-Tenancy, EKS Best Practices
     policies.kyverno.io/subject: NetworkPolicy
     kyverno.io/kyverno-version: 1.6.2
     policies.kyverno.io/minversion: 1.6.0
