--- a/best-practices/add_ns_quota/add_ns_quota.yaml
+++ b/best-practices/add_ns_quota/add_ns_quota.yaml
@@ -4,8 +4,9 @@ metadata:
   name: add-ns-quota
   annotations:
     policies.kyverno.io/title: Add Quota
-    policies.kyverno.io/category: Multi-Tenancy
+    policies.kyverno.io/category: Multi-Tenancy, EKS Best Practices
     policies.kyverno.io/subject: ResourceQuota, LimitRange
+    policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/description: >-
       To better control the number of resources that can be created in a given
       Namespace and provide default resource consumption limits for Pods,
@@ -16,9 +17,10 @@ spec:
   rules:
   - name: generate-resourcequota
     match:
-      resources:
-        kinds:
-        - Namespace
+      any:
+      - resources:
+          kinds:
+          - Namespace
     generate:
       apiVersion: v1
       kind: ResourceQuota
@@ -34,9 +36,10 @@ spec:
             limits.memory: '16Gi'
   - name: generate-limitrange
     match:
-      resources:
-        kinds:
-        - Namespace
+      any:
+      - resources:
+          kinds:
+          - Namespace
     generate:
       apiVersion: v1
       kind: LimitRange
