--- a/karpenter/add-karpenter-nodeselector/add-karpenter-nodeselector.yaml
+++ b/karpenter/add-karpenter-nodeselector/add-karpenter-nodeselector.yaml
@@ -4,7 +4,7 @@ metadata:
   name: add-karpenter-nodeselector
   annotations:
     policies.kyverno.io/title: Add Karpenter nodeSelector
-    policies.kyverno.io/category: Karpenter
+    policies.kyverno.io/category: Karpenter, EKS Best Practices
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
     kyverno.io/kyverno-version: 1.7.1
