--- a/other/disable_automountserviceaccounttoken/disable-automountserviceaccounttoken.yaml
+++ b/other/disable_automountserviceaccounttoken/disable-automountserviceaccounttoken.yaml
@@ -4,7 +4,7 @@ metadata:
   name: disable-automountserviceaccounttoken
   annotations:
     policies.kyverno.io/title: Disable automountServiceAccountToken
-    policies.kyverno.io/category: Other
+    policies.kyverno.io/category: Other, EKS Best Practices
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: ServiceAccount
     kyverno.io/kyverno-version: 1.5.1
