--- a/other/disallow_secrets_from_env_vars/disallow_secrets_from_env_vars.yaml
+++ b/other/disallow_secrets_from_env_vars/disallow_secrets_from_env_vars.yaml
@@ -4,9 +4,10 @@ metadata:
   name: secrets-not-from-env-vars
   annotations:
     policies.kyverno.io/title: Disallow Secrets from Env Vars
-    policies.kyverno.io/category: Sample
+    policies.kyverno.io/category: Sample, EKS Best Practices
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod, Secret
+    kyverno.io/kyverno-version: 1.6.0
     policies.kyverno.io/description: >-
       Secrets used as environment variables containing sensitive information may, if not carefully controlled, 
       be printed in log output which could be visible to unauthorized people and captured in forwarding
@@ -17,9 +18,10 @@ spec:
   rules:
   - name: secrets-not-from-env-vars
     match:
-      resources:
-        kinds:
-        - Pod
+      any:
+      - resources:
+          kinds:
+          - Pod
     validate:
       message: "Secrets must be mounted as volumes, not as environment variables."
       pattern:
@@ -31,9 +33,10 @@ spec:
                 X(secretKeyRef): "null"
   - name: secrets-not-from-envfrom
     match:
-      resources:
-        kinds:
-        - Pod
+      any:
+      - resources:
+          kinds:
+          - Pod
     validate:
       message: "Secrets must not come from envFrom statements."
       pattern:
