--- a/other/restrict_automount_sa_token/restrict_automount_sa_token.yaml
+++ b/other/restrict_automount_sa_token/restrict_automount_sa_token.yaml
@@ -4,7 +4,7 @@ metadata:
   name: restrict-automount-sa-token
   annotations:
     policies.kyverno.io/title: Restrict Auto-Mount of Service Account Tokens
-    policies.kyverno.io/category: Sample
+    policies.kyverno.io/category: Sample, EKS Best Practices
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod,ServiceAccount
     policies.kyverno.io/description: >-
