--- a/pod-security/subrule/restricted/restricted-latest/restricted-latest.yaml
+++ b/pod-security/subrule/restricted/restricted-latest/restricted-latest.yaml
@@ -4,7 +4,7 @@ metadata:
   name: podsecurity-subrule-restricted
   annotations:
     policies.kyverno.io/title: Restricted Pod Security Standards
-    policies.kyverno.io/category: Pod Security
+    policies.kyverno.io/category: Pod Security, EKS Best Practices
     policies.kyverno.io/severity: medium
     kyverno.io/kyverno-version: 1.8.0
     policies.kyverno.io/minversion: 1.8.0
