--- a/psa/add-psa-labels/add-psa-labels.yaml
+++ b/psa/add-psa-labels/add-psa-labels.yaml
@@ -4,7 +4,7 @@ metadata:
   name: add-psa-labels
   annotations:
     policies.kyverno.io/title: Add PSA Labels
-    policies.kyverno.io/category: Pod Security Admission
+    policies.kyverno.io/category: Pod Security Admission, EKS Best Practices
     policies.kyverno.io/severity: medium
     kyverno.io/kyverno-version: 1.7.1
     policies.kyverno.io/minversion: 1.6.0
