--- a/other/prevent-naked-pods/prevent-naked-pods.yaml
+++ b/other/prevent-naked-pods/prevent-naked-pods.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     policies.kyverno.io/title: Prevent Naked Pods
     pod-policies.kyverno.io/autogen-controllers: none
-    policies.kyverno.io/category: Other
+    policies.kyverno.io/category: Other, EKS Best Practices
     policies.kyverno.io/severity: medium
     kyverno.io/kyverno-version: 1.7.0
     policies.kyverno.io/minversion: 1.6.0
