--- a/karpenter/add-karpenter-donot-evict/add-karpenter-donot-evict.yaml
+++ b/karpenter/add-karpenter-donot-evict/add-karpenter-donot-evict.yaml
@@ -4,7 +4,7 @@ metadata:
   name: add-karpenter-donot-evict
   annotations:
     policies.kyverno.io/title: Add Karpenter Do Not Evict
-    policies.kyverno.io/category: Karpenter
+    policies.kyverno.io/category: Karpenter, EKS Best Practices
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
     kyverno.io/kyverno-version: 1.7.1
