rework of Require Pod Probes
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/best-practices/require_probes/require_probes.yaml
+++ b/best-practices/require_probes/require_probes.yaml
@@ -20,17 +20,25 @@ spec:
   validationFailureAction: audit
   background: true
   rules:
-  - name: validate-livenessProbe-readinessProbe
+  - name: validate-probes
     match:
-      resources:
-        kinds:
-        - Pod
+      any:
+      - resources:
+          kinds:
+          - Pod
     validate:
-      message: "Liveness and readiness probes are required."
-      pattern:
-        spec:
-          containers:
-          - livenessProbe:
-              =(periodSeconds): ">0"
-            readinessProbe:
-              =(periodSeconds): ">0"
+      message: "Liveness, readiness, or startup probes are required for all containers."
+      foreach:
+      - list: request.object.spec.containers[]
+        deny:
+          conditions:
+            all:
+            - key: livenessProbe
+              operator: AllNotIn
+              value: "{{ element.keys(@)[] }}"
+            - key: startupProbe
+              operator: AllNotIn
+              value: "{{ element.keys(@)[] }}"
+            - key: readinessProbe
+              operator: AllNotIn
+              value: "{{ element.keys(@)[] }}"
