--- a/best-practices/require_probes/kyverno-test.yaml
+++ b/best-practices/require_probes/kyverno-test.yaml
@@ -5,27 +5,18 @@ resources:
   - resource.yaml
 results:
   - policy: require-pod-probes
-    rule: validate-livenessProbe-readinessProbe
-    resource: goodpod01
+    rule: validate-probes
+    resources:
+    - goodpod01
+    - goodpod02
+    - goodpod03
+    - goodpod04
     kind: Pod
     result: pass
   - policy: require-pod-probes
-    rule: validate-livenessProbe-readinessProbe
-    resource: goodpod02
-    kind: Pod
-    result: pass
-  - policy: require-pod-probes
-    rule: validate-livenessProbe-readinessProbe
-    resource: badpod01
-    kind: Pod
-    result: fail
-  - policy: require-pod-probes
-    rule: validate-livenessProbe-readinessProbe
-    resource: badpod02
-    kind: Pod
-    result: fail
-  - policy: require-pod-probes
-    rule: validate-livenessProbe-readinessProbe
-    resource: badpod03
+    rule: validate-probes
+    resources: 
+    - badpod01
+    - badpod02
     kind: Pod
     result: fail
