--- a/best-practices/require_probes/resource.yaml
+++ b/best-practices/require_probes/resource.yaml
@@ -49,7 +49,7 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: badpod01
+  name: goodpod03
   labels:
     app: myapp
 spec:
@@ -66,7 +66,21 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: badpod02
+  name: goodpod04
+  labels:
+    app: myapp
+spec:
+  containers:
+  - name: goproxy
+    image: asfadsasfasdf:0.1
+    startupProbe:
+      grpc:
+        port: 8888
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: badpod01
   labels:
     app: myapp
 spec:
@@ -79,7 +93,7 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: badpod03
+  name: badpod02
   labels:
     app: myapp
 spec:
