--- a/other/require_pdb/require_pdb.yaml
+++ b/other/require_pdb/require_pdb.yaml
@@ -4,15 +4,16 @@ metadata:
   name: require-pdb
   annotations:
     policies.kyverno.io/title: Require PodDisruptionBudget
-    policies.kyverno.io/category: Sample
+    policies.kyverno.io/category: Sample, EKS Best Practices
     policies.kyverno.io/minversion: 1.3.6
     kyverno.io/kyverno-version: 1.6.2
     kyverno.io/kubernetes-version: "1.23"
     policies.kyverno.io/subject: Deployment, PodDisruptionBudget
     policies.kyverno.io/description: >-
       PodDisruptionBudget resources are useful to ensuring minimum availability
-      is maintained at all times. This policy checks all incoming Deployments
+      is maintained at all times. This policy checks all incoming Deployments and StatefulSets
       to ensure they have a matching, preexisting PodDisruptionBudget.
+      Note: This policy must be run in `enforce` mode to ensure accuracy.
 spec:
   validationFailureAction: audit
   background: false
