--- a/best-practices/require_probes/require_probes.yaml
+++ b/best-practices/require_probes/require_probes.yaml
@@ -14,8 +14,8 @@ metadata:
       `livenessProbe` is performed by the kubelet to determine if the Pod's containers
       are running or need to be restarted. A `readinessProbe` is used by Services
       and Deployments to determine if the Pod is ready to receive network traffic.
-      This policy validates that all containers have liveness and readiness probes by
-      ensuring the `periodSeconds` field is greater than zero.
+      This policy validates that all containers have one of livenessProbe, readinessProbe,
+      or startupProbe defined.
 spec:
   validationFailureAction: audit
   background: true
