fix allnotin policy
Signed-off-by: cleverhu <shouping.hu@daocloud.io>

--- a/kasten/k10-3-2-1-backup/k10-backup-policy.yaml
+++ b/kasten/k10-3-2-1-backup/k10-backup-policy.yaml
@@ -55,7 +55,7 @@ spec:
     weekly: 4
     monthly: 6
   actions:
-  - action: backup
+  - action: import
   #- action: export  # comment this line out to test 'enforce_3-2-1' policy
     exportParameters:
       frequency: '@monthly'
