update consul min TLS version
Signed-off-by: ashwinexe <kumarashwin2603@gmail.com>

--- a/consul/enforce-min-tls-version/kyverno-test.yaml
+++ b/consul/enforce-min-tls-version/kyverno-test.yaml
@@ -7,7 +7,7 @@ results:
 ##### Pods - Bad
   - policy: enforce-min-tls-version
     rule: adding-capabilities
-    resource: mesh01
+    resource: badmesh
     kind: Mesh
     result: fail
   ###### Pods - Good
