fix update rule and remove comments
Signed-off-by: ashwinexe <kumarashwin2603@gmail.com>

--- a/consul/enforce-min-tls-version/kyverno-test.yaml
+++ b/consul/enforce-min-tls-version/kyverno-test.yaml
@@ -4,15 +4,13 @@ policies:
 resources:
   - resource.yaml
 results:
-##### Pods - Bad
   - policy: enforce-min-tls-version
-    rule: adding-capabilities
+    rule: check-for-tls-version
     resource: badmesh
     kind: Mesh
     result: fail
-  ###### Pods - Good
   - policy: enforce-min-tls-version
-    rule: adding-capabilities
+    rule: check-for-tls-version
     resource: goodmesh
     kind: Mesh
     result: pass
