--- a/consul/enforce-min-tls-version/enforce-min-tls-version.yaml
+++ b/consul/enforce-min-tls-version/enforce-min-tls-version.yaml
@@ -6,7 +6,7 @@ metadata:
    policies.kyverno.io/title: Enforce Consul min TLS version 
    policies.kyverno.io/category: Consul
    policies.kyverno.io/severity: medium
-   policies.kyverno.io/subject: TlsVersion
+   policies.kyverno.io/subject: Mesh
    kyverno.io/kyverno-version: 1.8.0
    policies.kyverno.io/minversion: 1.6.0
    kyverno.io/kubernetes-version: "1.24"
