standardize category on Software Supply Chain Security
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/other/verify_image_with_multi_keys.yaml
+++ b/other/verify_image_with_multi_keys.yaml
@@ -4,7 +4,7 @@ metadata:
   name: verify-image-with-multi-keys
   annotations:
     policies.kyverno.io/title: Verify Image with Multiple Keys
-    policies.kyverno.io/category: Sample
+    policies.kyverno.io/category: Software Supply Chain Security
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/minversion: 1.7.0
