--- a/other/verify_image.yaml
+++ b/other/verify_image.yaml
@@ -4,7 +4,7 @@ metadata:
   name: verify-image
   annotations:
     policies.kyverno.io/title: Verify Image
-    policies.kyverno.io/category: Sample, EKS Best Practices
+    policies.kyverno.io/category: Software Supply Chain Security, EKS Best Practices
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/minversion: 1.7.0
