--- a/other/verify_image_slsa.yaml
+++ b/other/verify_image_slsa.yaml
@@ -4,7 +4,7 @@ metadata:
   name: verify-slsa-provenance-keyless
   annotations:
     policies.kyverno.io/title: Verify SLSA Provenance (Keyless)
-    policies.kyverno.io/category: Sample
+    policies.kyverno.io/category: Software Supply Chain Security
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/minversion: 1.8.3
