update disallow-default-namespace to current standards and add auto-gen note
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/best-practices/disallow_default_namespace/disallow_default_namespace.yaml
+++ b/best-practices/disallow_default_namespace/disallow_default_namespace.yaml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     pod-policies.kyverno.io/autogen-controllers: none
     policies.kyverno.io/title: Disallow Default Namespace
+    policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/category: Multi-Tenancy
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
@@ -13,16 +14,19 @@ metadata:
       isolate cluster resources across multiple applications and users. As a best
       practice, workloads should be isolated with Namespaces. Namespaces should be required
       and the default (empty) Namespace should not be used. This policy validates that Pods
-      specify a Namespace name other than `default`.
+      specify a Namespace name other than `default`. Rule auto-generation is disabled here
+      due to Pod controllers need to specify the `namespace` field under the top-level `metadata`
+      object and not at the Pod template level.
 spec:
   validationFailureAction: audit
   background: true
   rules:
   - name: validate-namespace
     match:
-      resources:
-        kinds:
-        - Pod
+      any:
+      - resources:
+          kinds:
+          - Pod
     validate:
       message: "Using 'default' namespace is not allowed."
       pattern:
@@ -30,12 +34,13 @@ spec:
           namespace: "!default"
   - name: validate-podcontroller-namespace
     match:
-      resources:
-        kinds:
-        - DaemonSet
-        - Deployment
-        - Job
-        - StatefulSet
+      any:
+      - resources:
+          kinds:
+          - DaemonSet
+          - Deployment
+          - Job
+          - StatefulSet
     validate:
       message: "Using 'default' namespace is not allowed for pod controllers."
       pattern:
