fix Verify Image policy by removing colon
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/other/verify_image.yaml
+++ b/other/verify_image.yaml
@@ -27,7 +27,7 @@ spec:
               - Pod
       verifyImages:
       - imageReferences:
-        - "ghcr.io/kyverno/test-verify-image:*"
+        - "ghcr.io/kyverno/test-verify-image*"
         mutateDigest: true
         attestors:
         - entries:
