add clarifying notes
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/best-practices/require_drop_cap_net_raw/require_drop_cap_net_raw.yaml
+++ b/best-practices/require_drop_cap_net_raw/require_drop_cap_net_raw.yaml
@@ -13,7 +13,8 @@ metadata:
       CAP_NET_RAW capability, enabled by default, allows processes in a container to
       forge packets and bind to any interface potentially leading to MitM attacks.
       This policy ensures that all containers explicitly drop the CAP_NET_RAW
-      ability.      
+      ability. Note that this policy also illustrates how to cover drop entries in any
+      case although this may not strictly conform to the Pod Security Standards.
 spec:
   validationFailureAction: audit
   background: true
