add test for bad flowschema
Signed-off-by: Daniel Kiptoon <kiptoonkipkurui@gmail.com>

--- a/best-practices/check_deprecated_apis/kyverno-test.yaml
+++ b/best-practices/check_deprecated_apis/kyverno-test.yaml
@@ -29,6 +29,11 @@ results:
     kind: CronJob
     result: skip
 
+  - policy: check-deprecated-apis
+    rule: validate-v1-29-removals
+    resource: bad-flowschema
+    kind: FlowSchema
+    result: fail
  
     
     
