declare resource for v1.29 deprecated apis testing
Signed-off-by: Daniel Kiptoon <kiptoonkipkurui@gmail.com>

--- a/best-practices/check_deprecated_apis/resource.yaml
+++ b/best-practices/check_deprecated_apis/resource.yaml
@@ -59,3 +59,14 @@ spec:
             - -c
             - date; echo Hello from the Kubernetes cluster
           restartPolicy: OnFailure
+
+---
+apiVersion: flowcontrol.apiserver.k8s.io/v1beta2
+kind: FlowSchema
+metadata:
+  name: bad-flowschema
+spec:
+  matchingPrecedence: 1000
+  priorityLevelConfiguration:
+    name: exempt
+  
