--- a/other/add_labels/add_labels.yaml
+++ b/other/add_labels/add_labels.yaml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     policies.kyverno.io/title: Add Labels
     policies.kyverno.io/category: Sample
+    policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Label
     policies.kyverno.io/description: >-
@@ -16,12 +17,13 @@ spec:
   rules:
   - name: add-labels
     match:
-      resources:
-        kinds:
-        - Pod
-        - Service
-        - ConfigMap
-        - Secret
+      any:
+      - resources:
+          kinds:
+          - Pod
+          - Service
+          - ConfigMap
+          - Secret
     mutate:
       patchStrategicMerge:
         metadata:
