--- a/other/limit-hostpath-type-pv/limit_hostpath_type_pv.yaml
+++ b/other/limit-hostpath-type-pv/limit_hostpath_type_pv.yaml
@@ -7,6 +7,7 @@ metadata:
     policies.kyverno.io/category: Other
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: PersistentVolume
+    policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/description: >-
       hostPath persistentvolumes consume the underlying node's file system. If hostPath volumes
       are not to be universally disabled, they should be restricted to only certain
@@ -18,9 +19,10 @@ spec:
   rules:
   - name: limit-hostpath-type-pv-to-slash-data
     match:
-      resources:
-        kinds:
-        - PersistentVolume
+      any:
+      - resources:
+          kinds:
+          - PersistentVolume
     preconditions:
       all:
       - key: "{{request.operation || 'BACKGROUND'}}"
