--- a/other/mitigate_log4shell/mitigate_log4shell.yaml
+++ b/other/mitigate_log4shell/mitigate_log4shell.yaml
@@ -6,6 +6,7 @@ metadata:
     policies.kyverno.io/title: Log4Shell Mitigation
     policies.kyverno.io/subject: Pod
     kyverno.io/kyverno-version: 1.6.2
+    policies.kyverno.io/minversion: 1.6.0
     kyverno.io/kubernetes-version: "1.23"
     policies.kyverno.io/category: Sample
     policies.kyverno.io/description: >-
@@ -21,9 +22,10 @@ spec:
   rules:
   - name: add-log4shell-mitigation-initcontainers
     match:
-      resources:
-        kinds:
-        - Pod
+      any:
+      - resources:
+          kinds:
+          - Pod
     mutate:
       patchStrategicMerge:
         spec:
@@ -34,9 +36,10 @@ spec:
                 value: "true"
   - name: add-log4shell-mitigation-containers
     match:
-      resources:
-        kinds:
-        - Pod
+      any:
+      - resources:
+          kinds:
+          - Pod
     mutate:
       patchStrategicMerge:
         spec:
