--- a/other/require_deployments_have_multiple_replicas/require_deployments_have_multiple_replicas.yaml
+++ b/other/require_deployments_have_multiple_replicas/require_deployments_have_multiple_replicas.yaml
@@ -7,6 +7,7 @@ metadata:
     policies.kyverno.io/category: Sample
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Deployment
+    policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/description: >-
       Deployments with a single replica cannot be highly available and thus the application
       may suffer downtime if that one replica goes down. This policy validates that Deployments
@@ -17,9 +18,10 @@ spec:
   rules:
     - name: deployment-has-multiple-replicas
       match:
-        resources:
-          kinds:
-          - Deployment
+        any:
+        - resources:
+            kinds:
+            - Deployment
       validate:
         message: "Deployments should have more than one replica to ensure availability."
         pattern:
