--- a/other/restrict_node_label_creation.yaml
+++ b/other/restrict_node_label_creation.yaml
@@ -6,6 +6,7 @@ metadata:
     policies.kyverno.io/title: Restrict node label creation
     policies.kyverno.io/category: Sample
     policies.kyverno.io/subject: Node, Label
+    policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/description: >-
       Node labels are critical pieces of metadata upon which many other applications and
       logic may depend and should not be altered or removed by regular users. Many cloud
@@ -21,9 +22,10 @@ spec:
   rules:
   - name: prevent-label-set
     match:
-      resources:
-        kinds:
-        - Node
+      any:
+      - resources:
+          kinds:
+          - Node
     preconditions:
       all:
       - key: "{{request.operation || 'BACKGROUND'}}"
