--- a/other/restrict_node_selection/restrict_node_selection.yaml
+++ b/other/restrict_node_selection/restrict_node_selection.yaml
@@ -6,6 +6,7 @@ metadata:
     policies.kyverno.io/title: Restrict node selection
     policies.kyverno.io/category: Sample
     policies.kyverno.io/subject: Pod
+    policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/description: >-
       The Kubernetes scheduler uses complex logic to determine the optimal placement
       for new Pods. Users who have access to set certain fields in a Pod spec
@@ -18,9 +19,10 @@ spec:
   rules:
   - name: restrict-nodeselector
     match:
-      resources:
-        kinds:
-        - Pod
+      any:
+      - resources:
+          kinds:
+          - Pod
     validate:
       message: Setting the nodeSelector field is prohibited.
       pattern:
@@ -28,9 +30,10 @@ spec:
           X(nodeSelector): "null"
   - name: restrict-nodename
     match:
-      resources:
-        kinds:
-        - Pod
+      any:
+      - resources:
+          kinds:
+          - Pod
     validate:
       message: Setting the nodeName field is prohibited.
       pattern:
