--- a/best-practices/add_safe_to_evict/add_safe_to_evict.yaml
+++ b/best-practices/add_safe_to_evict/add_safe_to_evict.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     policies.kyverno.io/category: Other
     policies.kyverno.io/subject: Pod,Annotation
-    policies.kyverno.io/minversion: 1.4.3
+    policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/description: >-
       The Kubernetes cluster autoscaler does not evict pods that 
       use hostPath or emptyDir volumes. To allow eviction of these pods, the annotation 
@@ -14,9 +14,10 @@ spec:
   rules: 
   - name: annotate-empty-dir
     match:
-      resources:
-        kinds:
-        - Pod
+      any:
+      - resources:
+          kinds:
+          - Pod
     mutate:
       patchStrategicMerge:
         metadata:
@@ -27,9 +28,10 @@ spec:
           - <(emptyDir): {}
   - name: annotate-host-path
     match:
-      resources:
-        kinds:
-        - Pod
+      any:
+      - resources:
+          kinds:
+          - Pod
     mutate:
       patchStrategicMerge:
         metadata:
