--- a/best-practices/disallow-empty-ingress-host/disallow_empty_ingress_host.yaml
+++ b/best-practices/disallow-empty-ingress-host/disallow_empty_ingress_host.yaml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     policies.kyverno.io/title: Disallow empty Ingress host
     policies.kyverno.io/category: Best Practices
+    policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Ingress
     policies.kyverno.io/description: >-
@@ -17,9 +18,10 @@ spec:
   rules:
     - name: disallow-empty-ingress-host
       match:
-        resources:
-          kinds:
-            - Ingress
+        any:
+        - resources:
+            kinds:
+              - Ingress
       validate:
         message: "The Ingress host name must be defined, not empty."
         deny:
