--- a/other/add_certificates_volume/add_certificates_volume.yaml
+++ b/other/add_certificates_volume/add_certificates_volume.yaml
@@ -6,7 +6,7 @@ metadata:
     policies.kyverno.io/title: Add Certificates as a Volume
     policies.kyverno.io/category: Sample
     policies.kyverno.io/subject: Pod,Volume
-    kyverno.io/kyverno-version: 1.5.2
+    kyverno.io/kyverno-version: 1.6.0
     kyverno.io/kubernetes-version: "1.21"
     policies.kyverno.io/minversion: 1.5.0
     pod-policies.kyverno.io/autogen-controllers: DaemonSet,Deployment,Job,StatefulSet
@@ -20,9 +20,10 @@ spec:
   rules:
   - name: add-ssl-certs
     match:
-      resources:
-        kinds:
-        - Pod
+      any:
+      - resources:
+          kinds:
+          - Pod
     preconditions:
       all:
       - key: '{{request.object.metadata.annotations."inject-certs"}}'
