--- a/other/add_env_vars_from_cm/add-env-vars-from-cm.yaml
+++ b/other/add_env_vars_from_cm/add-env-vars-from-cm.yaml
@@ -4,6 +4,7 @@ metadata:
   name: add-env-vars-from-cm
   annotations:
     policies.kyverno.io/title: Add Environment Variables from ConfigMap
+    policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/category: Other
     policies.kyverno.io/description: >-
@@ -17,9 +18,10 @@ spec:
   rules:
   - name: add-env-vars-from-cm
     match:
-      resources:
-        kinds:
-        - Pod
+      any:
+      - resources:
+          kinds:
+          - Pod
     mutate:
       patchStrategicMerge:
         spec:
