--- a/other/add_ndots/add_ndots.yaml
+++ b/other/add_ndots/add_ndots.yaml
@@ -6,6 +6,7 @@ metadata:
     policies.kyverno.io/title: Add ndots
     policies.kyverno.io/category: Sample
     policies.kyverno.io/subject: Pod
+    policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/description: >-
       The ndots value controls where DNS lookups are first performed in a cluster
       and needs to be set to a lower value than the default of 5 in some cases.
@@ -14,9 +15,10 @@ spec:
   rules:
   - name: add-ndots
     match:
-      resources:
-        kinds:
-        - Pod
+      any:
+      - resources:
+          kinds:
+          - Pod
     mutate:
       patchStrategicMerge:
         spec:
