--- a/other/add_nodeSelector/add_nodeSelector.yaml
+++ b/other/add_nodeSelector/add_nodeSelector.yaml
@@ -6,6 +6,7 @@ metadata:
     policies.kyverno.io/title: Add nodeSelector
     policies.kyverno.io/category: Sample
     policies.kyverno.io/subject: Pod
+    policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/description: >-
       The nodeSelector field uses labels to select the node on which a Pod can be scheduled.
       This can be useful when Pods have specific needs that only certain nodes in a cluster can provide.
@@ -14,9 +15,10 @@ spec:
   rules:
   - name: add-nodeselector
     match:
-      resources:
-        kinds:
-        - Pod
+      any:
+      - resources:
+          kinds:
+          - Pod
     # Adds the `nodeSelector` field to any Pod with two labels.
     mutate:
       patchStrategicMerge:
