--- a/other/always-pull-images/always-pull-images.yaml
+++ b/other/always-pull-images/always-pull-images.yaml
@@ -7,6 +7,7 @@ metadata:
     policies.kyverno.io/category: Sample
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
+    policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/description: >-
       By default, images that have already been pulled can be accessed by other
       Pods without re-pulling them if the name and tag are known. In multi-tenant scenarios,
@@ -17,9 +18,10 @@ spec:
   rules:
   - name: always-pull-images
     match:
-      resources:
-        kinds:
-        - Pod
+      any:
+      - resources:
+          kinds:
+          - Pod
     mutate:
       patchStrategicMerge:
         spec:
