--- a/other/block-pod-exec-by-pod-label.yaml
+++ b/other/block-pod-exec-by-pod-label.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     policies.kyverno.io/title: Block Pod Exec by Pod Label
     policies.kyverno.io/category: Sample
-    policies.kyverno.io/minversion: 1.4.2
+    policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       The `exec` command may be used to gain shell access, or run other commands, in a Pod's container. While this can
@@ -17,9 +17,10 @@ spec:
   rules:
   - name: deny-exec-by-label
     match:
-      resources:
-        kinds:
-        - PodExecOptions
+      any:
+      - resources:
+          kinds:
+          - PodExecOptions
     context:
     - name: podexeclabel
       apiCall:
