--- a/other/disallow_all_secrets/disallow_all_secrets.yaml
+++ b/other/disallow_all_secrets/disallow_all_secrets.yaml
@@ -7,7 +7,8 @@ metadata:
     policies.kyverno.io/category: Other
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod, Secret
-    kyverno.io/kyverno-version: 1.5.1
+    kyverno.io/kyverno-version: 1.6.0
+    policies.kyverno.io/minversion: 1.6.0
     kyverno.io/kubernetes-version: "1.21"
     policies.kyverno.io/description: >-
       Secrets often contain sensitive information which not all Pods need consume.
@@ -19,9 +20,10 @@ spec:
   rules:
   - name: secrets-not-from-env
     match:
-      resources:
-        kinds:
-        - Pod
+      any:
+      - resources:
+          kinds:
+          - Pod
     validate:
       message: "No Secrets from env."
       pattern:
@@ -43,9 +45,10 @@ spec:
                 X(secretKeyRef): "null"
   - name: secrets-not-from-envfrom
     match:
-      resources:
-        kinds:
-        - Pod
+      any:
+      - resources:
+          kinds:
+          - Pod
     validate:
       message: "No Secrets from envFrom."
       pattern:
@@ -64,9 +67,10 @@ spec:
             - X(secretRef): "null"
   - name: secrets-not-from-volumes
     match:
-      resources:
-        kinds:
-        - Pod
+      any:
+      - resources:
+          kinds:
+          - Pod
     validate:
       message: "No Secrets from volumes."
       pattern:
