--- a/other/disallow_localhost_services/disallow_localhost_services.yaml
+++ b/other/disallow_localhost_services/disallow_localhost_services.yaml
@@ -7,6 +7,7 @@ metadata:
     policies.kyverno.io/category: Sample
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Service
+    policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/description: >-
       A Service of type ExternalName which points back to localhost can potentially be used to exploit
       vulnerabilities in some Ingress controllers. This policy audits Services of type ExternalName
@@ -17,9 +18,10 @@ spec:
   rules:
   - name: no-localhost-service
     match:
-      resources:
-        kinds:
-        - Service
+      any:
+      - resources:
+          kinds:
+          - Service
     validate:
       message: "Service of type ExternalName cannot point to localhost."
       pattern:
