--- a/other/ensure_probes_different/ensure_probes_different.yaml
+++ b/other/ensure_probes_different/ensure_probes_different.yaml
@@ -7,7 +7,7 @@ metadata:
     policies.kyverno.io/title: Validate Probes
     policies.kyverno.io/category: Sample
     policies.kyverno.io/severity: medium
-    policies.kyverno.io/minversion: 1.3.6
+    policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       Liveness and readiness probes accomplish different goals, and setting both to the same
@@ -19,11 +19,12 @@ spec:
   rules:
     - name: validate-probes
       match:
-        resources:
-          kinds:
-          - Deployment
-          - DaemonSet
-          - StatefulSet
+        any:
+        - resources:
+            kinds:
+            - Deployment
+            - DaemonSet
+            - StatefulSet
       validate:
         message: "Liveness and readiness probes cannot be the same."
         deny:
