--- a/other/inject_sidecar_deployment/inject_sidecar_deployment.yaml
+++ b/other/inject_sidecar_deployment/inject_sidecar_deployment.yaml
@@ -6,6 +6,7 @@ metadata:
     policies.kyverno.io/title: Inject Sidecar Container
     policies.kyverno.io/category: Sample
     policies.kyverno.io/subject: Pod,Volume
+    policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/description: >-
       The sidecar pattern is very common in Kubernetes whereby other applications can
       insert components via tacit modification of a submitted resource. This is, for example,
@@ -16,9 +17,10 @@ spec:
   rules:
   - name: inject-sidecar
     match:
-      resources:
-        kinds:
-        - Deployment
+      any:
+      - resources:
+          kinds:
+          - Deployment
     mutate:
       patchStrategicMerge:
         spec:
