--- a/other/limit-hostpath-vols/limit-hostpath-vols.yaml
+++ b/other/limit-hostpath-vols/limit-hostpath-vols.yaml
@@ -23,9 +23,10 @@ spec:
   rules:
   - name: limit-hostpath-to-slash-data
     match:
-      resources:
-        kinds:
-        - Pod
+      any:
+      - resources:
+          kinds:
+          - Pod
     preconditions:
       all:
       - key: "{{ request.object.spec.volumes[?hostPath] | length(@) }}"
