--- a/other/limit_containers_per_pod/limit_containers_per_pod.yaml
+++ b/other/limit_containers_per_pod/limit_containers_per_pod.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     policies.kyverno.io/title: Limit Containers per Pod
     policies.kyverno.io/category: Sample
-    policies.kyverno.io/minversion: 1.3.6
+    policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       Pods can have many different containers which
@@ -19,12 +19,13 @@ spec:
   rules:
   - name: limit-containers-per-pod-controllers
     match:
-      resources:
-        kinds:
-        - Deployment
-        - DaemonSet
-        - Job
-        - StatefulSet
+      any:
+      - resources:
+          kinds:
+          - Deployment
+          - DaemonSet
+          - Job
+          - StatefulSet
     preconditions:
       all:
       - key: "{{request.operation || 'BACKGROUND'}}"
@@ -40,9 +41,10 @@ spec:
             value: "4"
   - name: limit-containers-per-pod-bare
     match:
-      resources:
-        kinds:
-        - Pod
+      any:
+      - resources:
+          kinds:
+          - Pod
     preconditions:
       all:
       - key: "{{request.operation || 'BACKGROUND'}}"
@@ -58,9 +60,10 @@ spec:
             value: "4"
   - name: limit-containers-per-pod-cronjob
     match:
-      resources:
-        kinds:
-        - CronJob
+      any:
+      - resources:
+          kinds:
+          - CronJob
     preconditions:
       all:
       - key: "{{request.operation || 'BACKGROUND'}}"
