--- a/other/mutate-large-termination-gps/mutate-large-termination-gps.yaml
+++ b/other/mutate-large-termination-gps/mutate-large-termination-gps.yaml
@@ -7,6 +7,7 @@ metadata:
     policies.kyverno.io/category: Sample
     policies.kyverno.io/severity: medium
     kyverno.io/kyverno-version: 1.6.2
+    policies.kyverno.io/minversion: 1.6.0
     kyverno.io/kubernetes-version: "1.23"
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
@@ -19,9 +20,10 @@ spec:
   rules:
     - name: mutate-termination-grace-period-seconds
       match:
-        resources:
-          kinds:
-            - Pod
+        any:
+        - resources:
+            kinds:
+              - Pod
       preconditions:
         all:
         - key: "{{request.object.spec.terminationGracePeriodSeconds || `0` }}"
