--- a/other/require_image_checksum/require_image_checksum.yaml
+++ b/other/require_image_checksum/require_image_checksum.yaml
@@ -7,6 +7,7 @@ metadata:
     policies.kyverno.io/category: Sample
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
+    policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/description: >-
       Use of a SHA checksum when pulling an image is often preferable because tags
       are mutable and can be overwritten. This policy checks to ensure that all images
@@ -17,9 +18,10 @@ spec:
   rules:
   - name: require-image-checksum
     match:
-      resources:
-        kinds:
-        - Pod
+      any:
+      - resources:
+          kinds:
+          - Pod
     validate:
       message: "Images must use checksums rather than tags."
       pattern:
