--- a/other/require_netpol/require_netpol.yaml
+++ b/other/require_netpol/require_netpol.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     policies.kyverno.io/title: Require NetworkPolicy
     policies.kyverno.io/category: Sample
-    policies.kyverno.io/minversion: 1.3.6
+    policies.kyverno.io/minversion: 1.6.0
     kyverno.io/kyverno-version: 1.6.2
     kyverno.io/kubernetes-version: "1.23"
     policies.kyverno.io/subject: Deployment, NetworkPolicy
@@ -20,9 +20,10 @@ spec:
   rules:
   - name: require-network-policy
     match:
-      resources:
-        kinds:
-        - Deployment
+      any:
+      - resources:
+          kinds:
+          - Deployment
     preconditions:
       any:
       - key: "{{request.operation || 'BACKGROUND'}}"
