--- a/other/restrict_annotations/restrict_annotations.yaml
+++ b/other/restrict_annotations/restrict_annotations.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     policies.kyverno.io/title: Restrict Annotations
     policies.kyverno.io/category: Sample
-    policies.kyverno.io/minversion: 1.3.0
+    policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/subject: Pod, Annotation
     policies.kyverno.io/description: >-
       Some annotations control functionality driven by other cluster-wide tools and are not
@@ -19,14 +19,15 @@ spec:
   rules:
   - name: block-flux-v1
     match:
-      resources:
-        kinds:
-        - Deployment
-        - CronJob
-        - Job
-        - StatefulSet
-        - DaemonSet
-        - Pod
+      any:
+      - resources:
+          kinds:
+          - Deployment
+          - CronJob
+          - Job
+          - StatefulSet
+          - DaemonSet
+          - Pod
     validate:
       message: Cannot use Flux v1 annotation.
       pattern:
