--- a/other/restrict_automount_sa_token/restrict_automount_sa_token.yaml
+++ b/other/restrict_automount_sa_token/restrict_automount_sa_token.yaml
@@ -7,6 +7,7 @@ metadata:
     policies.kyverno.io/category: Sample, EKS Best Practices
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod,ServiceAccount
+    policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/description: >-
       Kubernetes automatically mounts ServiceAccount credentials in each Pod.
       The ServiceAccount may be assigned roles allowing Pods to access API resources.
@@ -19,9 +20,10 @@ spec:
   rules:
   - name: validate-automountServiceAccountToken
     match:
-      resources:
-        kinds:
-        - Pod
+      any:
+      - resources:
+          kinds:
+          - Pod
     preconditions:
       all:
       - key: "{{ request.\"object\".metadata.labels.\"app.kubernetes.io/part-of\" || '' }}"
