--- a/other/restrict_ingress_classes/restrict_ingress_classes.yaml
+++ b/other/restrict_ingress_classes/restrict_ingress_classes.yaml
@@ -7,6 +7,7 @@ metadata:
     policies.kyverno.io/category: Sample
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Ingress
+    policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/description: >-
       Ingress classes should only be allowed which match up to deployed Ingress controllers
       in the cluster. Allowing users to define classes which cannot be satisfied by a deployed
@@ -20,9 +21,10 @@ spec:
   rules:
   - name: validate-ingress
     match:
-      resources:
-        kinds:
-        - Ingress
+      any:
+      - resources:
+          kinds:
+          - Ingress
     validate:
       message: "Unknown ingress class."
       pattern:
