--- a/other/restrict_loadbalancer/restrict_loadbalancer.yaml
+++ b/other/restrict_loadbalancer/restrict_loadbalancer.yaml
@@ -7,6 +7,7 @@ metadata:
     policies.kyverno.io/category: Sample
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Service
+    policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/description: >-
       Especially in cloud provider environments, a Service having type LoadBalancer will cause the
       provider to respond by creating a load balancer somewhere in the customer account. This adds
@@ -19,9 +20,10 @@ spec:
   rules:
   - name: no-LoadBalancer
     match:
-      resources:
-        kinds:
-        - Service
+      any:
+      - resources:
+          kinds:
+          - Service
     validate:
       message: "Service of type LoadBalancer is not allowed."
       pattern:
