--- a/other/restrict_pod_count_per_node/restrict_pod_count_per_node.yaml
+++ b/other/restrict_pod_count_per_node/restrict_pod_count_per_node.yaml
@@ -7,7 +7,7 @@ metadata:
     policies.kyverno.io/category: Sample
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
-    policies.kyverno.io/minversion: 1.3.2
+    policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/description: >-
       Sometimes Kubernetes Nodes may have a maximum number of Pods they can accommodate due to
       resources outside CPU and memory such as licensing, or in some
@@ -19,9 +19,10 @@ spec:
   rules:
     - name: restrict-pod-count
       match:
-        resources:
-          kinds:
-            - Pod
+        any:
+        - resources:
+            kinds:
+              - Pod
       context:
         - name: podcounts
           apiCall:
