--- a/other/sync_secrets/sync_secrets.yaml
+++ b/other/sync_secrets/sync_secrets.yaml
@@ -6,6 +6,7 @@ metadata:
     policies.kyverno.io/title: Sync Secrets
     policies.kyverno.io/category: Sample
     policies.kyverno.io/subject: Secret
+    policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/description: >-
       Secrets like registry credentials often need to exist in multiple
       Namespaces so Pods there have access. Manually duplicating those Secrets
@@ -17,9 +18,10 @@ spec:
   rules:
   - name: sync-image-pull-secret
     match:
-      resources:
-        kinds:
-        - Namespace
+      any:
+      - resources:
+          kinds:
+          - Namespace
     generate:
       apiVersion: v1
       kind: Secret
