--- a/cert-manager/limit-dnsnames/limit-dnsnames.yaml
+++ b/cert-manager/limit-dnsnames/limit-dnsnames.yaml
@@ -6,7 +6,7 @@ metadata:
     policies.kyverno.io/title: Limit dnsNames
     policies.kyverno.io/category: Cert-Manager
     policies.kyverno.io/severity: medium
-    policies.kyverno.io/minversion: 1.3.6
+    policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/subject: Certificate
     policies.kyverno.io/description: >-
       Some applications will not accept certificates containing more than a single name.
@@ -18,13 +18,15 @@ spec:
   rules:
   - name: limit-dnsnames
     match:
-      resources:
-        kinds:
-        - Certificate
+      any:
+      - resources:
+          kinds:
+          - Certificate
     validate:
       message: Only one dnsNames entry allowed per certificate request.
       deny:
         conditions:
-        - key: "{{request.object.spec.dnsNames || `[]` | length(@)}}"
-          operator: GreaterThan
-          value: "1"
+          all:
+          - key: "{{request.object.spec.dnsNames || `[]` | length(@)}}"
+            operator: GreaterThan
+            value: "1"
