--- a/cert-manager/limit-duration/limit-duration.yaml
+++ b/cert-manager/limit-duration/limit-duration.yaml
@@ -6,7 +6,7 @@ metadata:
     policies.kyverno.io/title: Certificate max duration 100 days
     policies.kyverno.io/category: Cert-Manager
     policies.kyverno.io/severity: medium
-    policies.kyverno.io/minversion: 1.3.6
+    policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/subject: Certificate
     policies.kyverno.io/description: >-
       Kubernetes managed non-letsencrypt certificates have to be renewed in every 100 days.
@@ -16,9 +16,10 @@ spec:
   rules:
   - name: certificate-duration-max-100days 
     match:
-      resources:
-        kinds:
-        - Certificate
+      any:
+      - resources:
+          kinds:
+          - Certificate
     preconditions:
       all:
       - key: "{{ contains(request.object.spec.issuerRef.name, 'letsencrypt') }}"
@@ -31,6 +32,7 @@ spec:
       message: "certificate duration must be < than 2400h (100 days)"
       deny:
         conditions:
-        - key: "{{ max( [ to_number(regex_replace_all('h.*',request.object.spec.duration,'')), to_number('2400') ] ) }}"
-          operator: NotEquals
-          value: 2400
+          all:
+          - key: "{{ max( [ to_number(regex_replace_all('h.*',request.object.spec.duration,'')), to_number('2400') ] ) }}"
+            operator: NotEquals
+            value: 2400
