--- a/traefik/disallow_default_tlsoptions/disallow_default_tlsoptions.yaml
+++ b/traefik/disallow_default_tlsoptions/disallow_default_tlsoptions.yaml
@@ -7,7 +7,7 @@ metadata:
     policies.kyverno.io/category: Traefik
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: TLSOption
-    kyverno.io/kyverno-version: 1.5.1
+    kyverno.io/kyverno-version: 1.6.0
     kyverno.io/kubernetes-version: "1.21"
     policies.kyverno.io/description: >-
       The TLSOption CustomResource sets cluster-wide TLS configuration options for Traefik when 
@@ -20,11 +20,12 @@ spec:
   rules:
   - name: disallow-default-tlsoptions
     match:
-      resources:
-        names:
-        - default
-        kinds:
-        - TLSOption
+      any:
+      - resources:
+          names:
+          - default
+          kinds:
+          - TLSOption
     exclude:
       clusterRoles:
       - cluster-admin
