--- a/other/add-pod-priorityclassname/add-pod-priorityclassname.yaml
+++ b/other/add-pod-priorityclassname/add-pod-priorityclassname.yaml
@@ -7,6 +7,7 @@ metadata:
     policies.kyverno.io/category: Other
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
+    pod-policies.kyverno.io/autogen-controllers: none
     kyverno.io/kyverno-version: 1.7.1
     policies.kyverno.io/minversion: 1.6.0
     kyverno.io/kubernetes-version: "1.23"
@@ -17,7 +18,7 @@ metadata:
 spec:
   background: false
   rules:
-    - name: add-priorityclass
+    - name: add-priorityclass-pods
       match:
         any:
         - resources:
@@ -35,4 +36,45 @@ spec:
             path: '/spec/priority'
           - op: add
             path: /spec/priorityClassName
+            value: 'non-production'
+    - name: add-priorityclass-controllers
+      match:
+        any:
+        - resources:
+            kinds:
+            - Deployment
+            - DaemonSet
+            - StatefulSet
+            - Job
+            namespaceSelector:
+              matchExpressions:
+                - key: env
+                  operator: NotIn
+                  values:
+                  - production
+      mutate:
+        patchesJson6902: |-
+          - op: remove
+            path: '/spec/template/spec/priority'
+          - op: add
+            path: /spec/template/spec/priorityClassName
+            value: 'non-production'
+    - name: add-priorityclass-cronjobs
+      match:
+        any:
+        - resources:
+            kinds:
+            - CronJob
+            namespaceSelector:
+              matchExpressions:
+                - key: env
+                  operator: NotIn
+                  values:
+                  - production
+      mutate:
+        patchesJson6902: |-
+          - op: remove
+            path: '/spec/jobTemplate/spec/template/spec/priority'
+          - op: add
+            path: /spec/jobTemplate/spec/template/spec/priorityClassName
             value: 'non-production'
