--- a/other/check_serviceaccount/check_serviceaccount.yaml
+++ b/other/check_serviceaccount/check_serviceaccount.yaml
@@ -29,6 +29,9 @@ spec:
         - key: "{{serviceAccountName}}"
           operator: Equals
           value: "*?"
+        - key: "{{request.operation}}"
+          operator: Equals
+          value: CREATE
       validate:
         message: "The ServiceAccount used to create this Pod is confined to using the same account when running the Pod."
         pattern:
