--- a/velero/block-velero-restore/artifacthub-pkg.yml
+++ b/velero/block-velero-restore/artifacthub-pkg.yml
@@ -16,6 +16,16 @@ displayName: Block Velero Restore
 createdAt: 2023-03-29T00:00:00.000Z
 description: |
   This policy prevents restores from Velero to specific namespaces.
+readme: |
+  This policy prevents restores from Velero to specific namespaces.
+  Velero allows on backup and restore operations and is designed to be
+  run with full cluster admin permissions. It allows on cross
+  namespace restore operations, which means you can restore backup
+  of namespace A to namespace B. This policy protect restore operation
+  into system or any protected namespaces, listed in deny condition section.
+  It checks the Restore CRD object and its namespaceMapping field.
+  If destination match protected namespace then operation fails and
+  warning message is throw.
 
 # Optional fields
 keywords:
@@ -23,3 +33,14 @@ keywords:
   - restore
   - namespace
   - kyverno
+license: Apache-2.0
+
+maintainers:
+  - name: Chip Zoller
+    email: chip@nirmata.com
+
+annotations: # (optional, keys and values must be strings)
+  kyverno/categories: "Velero"
+  kyverno/kubernetesVersion: "1.20"
+  kyverno/subject: "Restore"
+  kyverno/version: "1.0.0"
