Update repository metadata file documentation
Signed-off-by: Haoyu Guo <haoyuguo@usc.edu>

--- a/artifacthub-repo.yml
+++ b/artifacthub-repo.yml
@@ -2,4 +2,4 @@
 repositoryID: 231d81b2-c91a-4a4b-907e-67c0a863e8fa
 owners:
   - name: Chip Zoller
-    email: chip@nirmata.com
+    email: chipzoller@gmail.com
